# guide

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
.travis/: before_install.sh
ci/: before_install.sh
cmake/: GUIDEConfig.cmake.in  guide.pc.in
debian/: changelog  control
guide/: CMakeLists.txt  EventHandler.cpp  EventHandler.h  MainWindow.cpp  MainWindow.h  WorldNode.cpp  WorldNode.h  WorldScene.h  guide.cpp  guide.qrc
guide/widgets/: QOgreWidget.cpp  QOgreWidget.h
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  WorldScene.cpp  WorldScene.h  guide.cpp  main.cpp
src/widgets/: MainViewer.cpp  MainViewer.h  Ogre3dHeaders.h  QOgreWidget.cpp  QOgreWidget.h  ViewWidget.cpp  ViewWidget.h  ViewerWidget.cpp  ViewerWidget.h
tests/: CMakeLists.txt
unittests/: CMakeLists.txt
